Add exports for sunpkcs11-wrapper (#922)